--- a/src/styles.css
+++ b/src/styles.css
@@ -28,3 +28,23 @@
 .icon-container-right {
     padding-right: 2rem;
 }
+
+/* Thin Scrollbar */
+.thin-scrollbar::-webkit-scrollbar {
+    width: 5px;
+}
+
+.thin-scrollbar::-webkit-scrollbar-track {
+    border-radius: 5px;
+    background-color: white;
+}
+
+.thin-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #a8bbbf;
+    border-radius: 5px;
+}
+
+.thin-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #6c7477;
+    cursor: pointer;
+}
